--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "car-city-data-story",
   "version": "1.0.0",
   "description": "Data-story about the impact of cars in cities and municipalities in the Netherlands using Vue.js and D3.js.",
-  "main": "index.js",
+  "main": "src/main.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,40 @@
   "bugs": {
     "url": "https://github.com/qiubee/frontend-applications/issues"
   },
-  "homepage": "https://github.com/qiubee/frontend-applications#readme"
+  "homepage": "https://github.com/qiubee/frontend-applications#readme",
+  "dependencies": {
+    "core-js": "^3.7.0",
+    "d3": "^6.2.0",
+    "topojson": "^3.0.2",
+    "vue": "^3.0.2"
+  },
+  "devDependencies": {
+    "@vue/cli": "^4.5.9",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-vue": "^7.1.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
